Added color to tooltip

--- a/blocks/_blog-post-content.liquid
+++ b/blocks/_blog-post-content.liquid
@@ -23,12 +23,13 @@
     text-decoration-thickness: 1px;
     text-underline-offset: 2px;
     cursor: help;
-    color: inherit;
+    color: #ffbb00;
     position: relative;
   }
 
   .has-tooltip:hover {
-    text-decoration-color: var(--color-primary, #0066cc);
+    text-decoration-color: #ffbb00;
+    color: #ffbb00;
   }
 
   /* Tooltip popup */
