--- a/blocks/_blog-post-content.liquid
+++ b/blocks/_blog-post-content.liquid
@@ -1,6 +1,7 @@
 
 
 <script src="{{ 'article-tooltips.js' | asset_url }}" type="module" fetchpriority="low"></script>
+<script src="{{ 'tooltip-syntax-processor.js' | asset_url }}" type="module" fetchpriority="low"></script>
 
 <div class="blog-post-content rte">
   <article-tooltips>
