Implement Multimedia Layers/Embeddings Inline Claude V1

--- a/blocks/_blog-post-content.liquid
+++ b/blocks/_blog-post-content.liquid
@@ -3,6 +3,8 @@
 <div class="blog-post-content rte">
   <rte-formatter>
     {{ article.content }}
+    <!-- Inline Media Shortcodes -->
+    {% render 'render-inline-media', content: article.content, article: article %}
   </rte-formatter>
 </div>
 
