Implement Multimedia Layers/Embeddings Inline Claude V1

--- a/sections/main-blog-post.liquid
+++ b/sections/main-blog-post.liquid
@@ -1,5 +1,5 @@
 
-{% render 'inline-media-styles' %}
+{% render 'inline-media-styles' %} {%- comment -%} Render inline media styles for multimedia embeddings {%- endcomment -%}
 <div class="section-background color-{{ section.settings.color_scheme }}"></div>
 <div class="section color-{{ section.settings.color_scheme }}">
   <div
