Added article overflow below the newsletter banner feature

--- a/blocks/_blog-post-card.liquid
+++ b/blocks/_blog-post-card.liquid
@@ -420,6 +420,13 @@
     display: none;
   }
 
+  /* Hide "Read more..." link in hover bar description as well */
+  .hover-bar__desc a,
+  .hover-bar__desc .text-block a,
+  .hover-bar__desc .blog-post-card__content-text a {
+    display: none !important;
+  }
+
   /* READ MORE button styling */
   .blog-post-card__read-more {
     display: block;
