--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -299,7 +299,7 @@
    */
   .blog-posts-container--above-banner .blog-post-item:nth-child(2),
   .blog-posts-container--above-banner .blog-post-item:nth-child(3) {
-    --blog-post-card-scale: 0.8;
+    --blog-post-card-scale: 0.7;
     display: flex;
     height: 100%;
 
@@ -310,6 +310,24 @@
 
       grid-column: span 6;
     }
+  }
+
+  /**
+   * Make images square for all rows except the first (featured) article
+   * This applies to row 2, 3, and all rows below the banner
+   */
+  .blog-posts-container--above-banner .blog-post-item:not(:first-child) .blog-post-card__image-container,
+  .blog-posts-container--below-banner .blog-post-item .blog-post-card__image-container {
+    aspect-ratio: 1 / 1;
+    overflow: hidden;
+  }
+
+  .blog-posts-container--above-banner .blog-post-item:not(:first-child) .blog-post-card__image-container img,
+  .blog-posts-container--below-banner .blog-post-item .blog-post-card__image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
   }
 
   /**
